--- a/ui/src/pages/update/update.less
+++ b/ui/src/pages/update/update.less
@@ -53,6 +53,7 @@
     font-size: 14px;
     text-align: center;
     margin: 0 5px;
+    min-width: 100px;
 }
 
 .btn-update {
@@ -63,36 +64,19 @@
     font-size: 14px;
     text-align: center;
     margin: 0 5px;
+    min-width: 140px;
 }
 
-.btn-github {
+.btn-disabled {
     padding: 8px 16px;
-    background-color: #333333;
-    color: white;
+    background-color: #666666;
+    color: #aaaaaa;
     border-radius: 4px;
     font-size: 14px;
     text-align: center;
     margin: 0 5px;
-}
-
-.btn-cleanup {
-    padding: 8px 16px;
-    background-color: #ffc107;
-    color: #333333;
-    border-radius: 4px;
-    font-size: 14px;
-    text-align: center;
-    margin: 0 5px;
-}
-
-.btn-back {
-    padding: 8px 16px;
-    background-color: #6c757d;
-    color: white;
-    border-radius: 4px;
-    font-size: 14px;
-    text-align: center;
-    margin: 0 5px;
+    min-width: 140px;
+    opacity: 0.8;
 }
 
 .version-new {
@@ -107,7 +91,7 @@
 .item {
     flex-direction: row;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 
 .item-text {
