--- a/ui/src/pages/update/update.less
+++ b/ui/src/pages/update/update.less
@@ -71,7 +71,7 @@
     min-height: 100px;
     max-height: 200px;
     background-color: #111111;
-    color: #cccccc;
+    color: #ffffff;
     border: 1px solid #333333;
     border-radius: 3px;
     padding: 10px;
