--- a/ui/src/pages/deviceinfo/deviceinfo.less
+++ b/ui/src/pages/deviceinfo/deviceinfo.less
@@ -60,12 +60,13 @@
   transform: scale(0.95);
 }
 
-/* 修改这里：将文字图标样式改为图片图标样式 */
+/* 修改刷新图标为图片样式 */
 .refresh-icon {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
 }
 
+/* 移除文字相关的样式 */
 .refresh-text {
   display: none;
 }
